[gd_scene load_steps=5 format=2]

[ext_resource path="res://games/flash_ttt/assets/weapons/bullets/pellet/pellet.gd" type="Script" id=1]
[ext_resource path="res://games/flash_ttt/assets/weapons/bullets/textures/EmitterPlaceholder.PNG" type="Texture" id=2]


[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[node name="Pellet" type="Area2D"]
material = SubResource( 1 )
z_index = 1
script = ExtResource( 1 )

[node name="Mask" type="Light2D" parent="."]
scale = Vector2( 0.02, 0.02 )
enabled = false
texture = ExtResource( 2 )
energy = 2.0
mode = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Polygon2D" parent="."]
z_as_relative = false
polygon = PoolVector2Array( -5, -5, 5, -5, 5, 5, -5, 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SelfCollideTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Pellet_body_entered"]
[connection signal="timeout" from="SelfCollideTimer" to="." method="_on_SelfCollideTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_DespawnTimer_timeout"]
